unpackaged/main/default/objects/BSF_Task_Checklist__c/BSF_Task_Checklist__c.object-meta.xml
<CustomObject>
    <label>BSF Task Checklist</label>
    <nameField>
        <displayFormat>TCS-{00000}</displayFormat>
        <label>BSF Task Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BSF Task Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>