unpackaged/main/default/objects/BSF_Task_Checklist__c/fields/Input_Short_Text_2__c.field-meta.xml
<CustomField>
    <fullName>Input_Short_Text_2__c</fullName>
    <label>Input Short Text 2</label>
    <type>TextArea</type>
</CustomField>