unpackaged/main/default/objects/BSF_Task_Checklist__c/fields/OpportunityLookup__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Lookup</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>BSF Task Checklists</relationshipLabel>
    <relationshipName>BSF_Task_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>