unpackaged/main/default/objects/BSF_Task_Checklist__c/fields/Picklist_Input_1__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Input_1__c</fullName>
    <label>Picklist Input 1</label>
    <type>TextArea</type>
</CustomField>