unpackaged/main/default/objects/BSF_Task_Checklist__c/fields/TaskLookup__c.field-meta.xml
<CustomField>
    <fullName>TaskLookup__c</fullName>
    <label>Task Lookup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>